--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
       <version>4.5.5</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-text</artifactId>
+      <version>1.4</version>
+    </dependency>
+    <dependency>
       <groupId>com.fasterxml.jackson.core</groupId>
       <artifactId>jackson-databind</artifactId>
       <version>2.9.5</version>
@@ -76,16 +81,6 @@
       <groupId>org.jsoup</groupId>
       <artifactId>jsoup</artifactId>
       <version>1.11.2</version>
-    </dependency>
-
-    <!--
-        For InstapaperService functionality
-        TODO: This should be broken out into its own package.
-    -->
-    <dependency>
-      <groupId>com.github.scribejava</groupId>
-      <artifactId>scribejava-apis</artifactId>
-      <version>5.5.0</version>
     </dependency>
   </dependencies>
 </project>
