Comment out use of jar-with-dependencies as it's only need when using Lambda and takes a long time to run.

--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
           <target>1.8</target>
         </configuration>
       </plugin>
+      <!-- Move this to lambda package
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-assembly-plugin</artifactId>
@@ -36,7 +37,7 @@
             </goals>
           </execution>
         </executions>
-      </plugin>
+      </plugin> -->
     </plugins>
   </build>
 
