--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,11 @@
       <version>1.4</version>
     </dependency>
     <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.8.1</version>
+    </dependency>
+    <dependency>
       <groupId>com.orbitalsoftware</groupId>
       <artifactId>instapaper</artifactId>
       <version>1.0-SNAPSHOT</version>
