--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,12 @@
   <groupId>com.orbitalsoftware</groupId>
   <artifactId>readitlater</artifactId>
   <version>1.0-SNAPSHOT</version>
+  <parent>
+    <groupId>com.orbitalsoftware</groupId>
+    <artifactId>harvest</artifactId>
+    <version>1.0-SNAPSHOT</version>
+  </parent>
+
   <build>
     <plugins>
       <plugin>
@@ -16,6 +22,14 @@
         <configuration>
           <source>1.8</source>
           <target>1.8</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>1.6.0</version>
+        <configuration>
+          <mainClass>com.orbitalsoftware.readitlater.alexa.Main</mainClass>
         </configuration>
       </plugin>
     </plugins>
@@ -31,11 +45,6 @@
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
       <version>1.16.22</version>
-    </dependency>
-    <dependency>
-      <groupId>com.orbitalsoftware</groupId>
-      <artifactId>harvest</artifactId>
-      <version>1.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>com.orbitalsoftware</groupId>
